# cost-analyzer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.specify/memory/: constitution.md
docs/: issue-7-report.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
knowledge/: oci-auth-instance-principal-vs-api-key.md
specs/001-nl-cost-query/: data-model.md  nl-e2e-test-report-2026-03-20.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-ui/contracts/: ui.md
specs/003-agent-interop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-a2a-k8s-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-nl-query-quality-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-nl-chat-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-compartment-groupby/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/cost_analyzer/: __init__.py  __main__.py  a2a_server.py  api.py  cli.py  config.py  engine.py  formatter.py  models.py  oci_client.py  parser.py
tests/: conftest.py
tests/e2e/: conftest.py  test_ui_e2e.py
tests/integration/: test_a2a.py  test_api.py  test_k8s_discovery.py  test_oci_client.py
tests/unit/: test_a2a_server.py  test_api_auth.py  test_chat_response.py  test_engine.py  test_formatter.py  test_models.py  test_parser.py  test_ui_routes.py
(+25 files in other folders)
