[project]
name = "cost-analyzer"
version = "0.1.0"
description = "Natural language OCI cost query tool"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "rich>=13",
    "oci>=2.143",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "dateparser>=1.2",
    "python-dateutil>=2.9",
]

[project.scripts]
cost-analyzer = "cost_analyzer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cost_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=cost_analyzer --cov-report=term-missing --cov-fail-under=60"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/cost_analyzer/models.py" = ["TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["cost_analyzer"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15.6",
]
